--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -249,7 +249,7 @@
     <div class="meta">
       <p style="color: var(--text-muted); font-size: 14px;">Made by MrsBlobby</p>
       <p style="color: var(--text-muted); font-size: 12px;">
-        Last Updated: October 4, 2025
+        Last Updated: October 8, 2025
       </p>
     </div>
 
@@ -257,6 +257,73 @@
     <details>
       <summary>Version History</summary>
       <!-- changelog entries -->
+<!-- Version history -->
+<details>
+  <summary>Version History</summary>
+
+  <div class="changelog-entry">
+    <h4>v2.2</h4>
+    <ul>
+      <li>Added sorting options</li>
+    </ul>
+  </div>
+  <div class="changelog-entry">
+    <h4>v2.1.2</h4>
+    <ul>
+      <li>Fixed issue that caused a lot of Turret entries to be missing</li>
+    </ul>
+  </div>
+
+  <div class="changelog-entry">
+    <h4>v2.1.1</h4>
+    <ul>
+      <li>Fixed Fauna subcategory not displaying correctly</li>
+    </ul>
+  </div>
+
+  <div class="changelog-entry">
+    <h4>v2.1</h4>
+    <ul>
+      <li>Added embed when linking tool on Discord</li>
+    </ul>
+  </div>
+
+  <div class="changelog-entry">
+    <h4>v2.0</h4>
+    <ul>
+      <li>Reworked UI entirely. Added more mobile-friendly UI</li>
+    </ul>
+  </div>
+
+  <div class="changelog-entry">
+    <h4>v1.2</h4>
+    <ul>
+      <li>Added version history</li>
+    </ul>
+  </div>
+
+  <div class="changelog-entry">
+    <h4>v1.1.1</h4>
+    <ul>
+      <li>Fixed wallpaper images</li>
+    </ul>
+  </div>
+
+  <div class="changelog-entry">
+    <h4>v1.1</h4>
+    <ul>
+      <li>Added image support</li>
+    </ul>
+  </div>
+
+  <div class="changelog-entry">
+    <h4>v1.0</h4>
+    <ul>
+      <li>Initial creation</li>
+    </ul>
+  </div>
+</details>
+
     </details>
   </div>
 
