--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -56,7 +56,7 @@
       padding: 8px 12px;
       font-size: 14px;
       cursor: pointer;
-      background-image: none; 
+      background-image: none;
     }
 
     .controls {
@@ -67,48 +67,34 @@
       padding: 12px 16px;
       border-bottom: 1px solid var(--card-bg);
       text-align: center;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 12px;
     }
 
-    input[type="text"] {
+    .controls input[type="text"] {
       padding: 10px;
       font-size: 16px;
-      width: 90%;
+      width: 100%;
       max-width: 400px;
       border: 2px solid var(--accent);
       border-radius: 6px;
       background-color: var(--card-bg);
       color: var(--text);
-      display: block;
-      margin: 0 auto 10px auto;
-    }
-
-    /* Inline controls for toggle + sort */
-    .controls-inline {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 12px;
-      margin-top: 8px;
-    }
-
-    .toggle-container {
-      display: flex;
-      align-items: center;
-      gap: 4px;
-    }
-
-    .sort-container {
-      display: flex;
-      align-items: center;
-    }
-
-    .separator {
-      color: var(--text-muted);
     }
 
     .controls label {
       font-size: 14px;
       color: var(--text-muted);
+      margin-left: 4px;
+    }
+
+    .controls .inline-group {
+      display: flex;
+      align-items: center;
+      gap: 8px;
     }
 
     ul {
@@ -159,17 +145,17 @@
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      gap: 0; /* arrows handle spacing */
+      gap: 0;
     }
 
     .result-right span.pill {
       background: var(--bg);
       border: 2px solid var(--accent);
       border-radius: 20px;
-      padding: 4px 12px;       
-      font-size: 16px;        
+      padding: 4px 12px;
+      font-size: 16px;
       color: var(--accent);
-      font-weight: normal;    
+      font-weight: normal;
       display: inline-flex;
       align-items: center;
     }
@@ -240,6 +226,10 @@
         border-left: 8px solid var(--accent);
         margin: 0 4px;
       }
+
+      .controls {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
@@ -248,105 +238,63 @@
     <img src="/assets/CoverImage.png" alt="Fallout 76 C.A.M.P. Item Lookup" style="display: block; margin: 0 auto; max-width: 100%; height: auto;">
     <div class="meta">
       <p style="color: var(--text-muted); font-size: 14px;">Made by MrsBlobby</p>
-      <p style="color: var(--text-muted); font-size: 12px;">
-        Last Updated: October 8, 2025
-      </p>
+      <p style="color: var(--text-muted); font-size: 12px;">Last Updated: October 4, 2025</p>
     </div>
 
     <!-- Version history -->
     <details>
       <summary>Version History</summary>
-      <!-- changelog entries -->
-<!-- Version history -->
-<details>
-  <summary>Version History</summary>
-
-  <div class="changelog-entry">
-    <h4>v2.2</h4>
-    <ul>
-      <li>Added sorting options</li>
-    </ul>
-  </div>
-  <div class="changelog-entry">
-    <h4>v2.1.2</h4>
-    <ul>
-      <li>Fixed issue that caused a lot of Turret entries to be missing</li>
-    </ul>
-  </div>
-
-  <div class="changelog-entry">
-    <h4>v2.1.1</h4>
-    <ul>
-      <li>Fixed Fauna subcategory not displaying correctly</li>
-    </ul>
-  </div>
-
-  <div class="changelog-entry">
-    <h4>v2.1</h4>
-    <ul>
-      <li>Added embed when linking tool on Discord</li>
-    </ul>
-  </div>
-
-  <div class="changelog-entry">
-    <h4>v2.0</h4>
-    <ul>
-      <li>Reworked UI entirely. Added more mobile-friendly UI</li>
-    </ul>
-  </div>
-
-  <div class="changelog-entry">
-    <h4>v1.2</h4>
-    <ul>
-      <li>Added version history</li>
-    </ul>
-  </div>
-
-  <div class="changelog-entry">
-    <h4>v1.1.1</h4>
-    <ul>
-      <li>Fixed wallpaper images</li>
-    </ul>
-  </div>
-
-  <div class="changelog-entry">
-    <h4>v1.1</h4>
-    <ul>
-      <li>Added image support</li>
-    </ul>
-  </div>
-
-  <div class="changelog-entry">
-    <h4>v1.0</h4>
-    <ul>
-      <li>Initial creation</li>
-    </ul>
-  </div>
-</details>
-
+      <div class="changelog-entry">
+        <h4>v2.1.2</h4>
+        <ul><li>Fixed issue that caused a lot of Turret entries to be missing</li></ul>
+      </div>
+      <div class="changelog-entry">
+        <h4>v2.1.1</h4>
+        <ul><li>Fixed Fauna subcategory not displaying correctly</li></ul>
+      </div>
+      <div class="changelog-entry">
+        <h4>v2.1</h4>
+        <ul><li>Added embed when linking tool on Discord</li></ul>
+      </div>
+      <div class="changelog-entry">
+        <h4>v2.0</h4>
+        <ul><li>Reworked UI entirely. Added more mobile-friendly UI</li></ul>
+      </div>
+      <div class="changelog-entry">
+        <h4>v1.2</h4>
+        <ul><li>Added version history</li></ul>
+      </div>
+      <div class="changelog-entry">
+        <h4>v1.1.1</h4>
+        <ul><li>Fixed wallpaper images</li></ul>
+      </div>
+      <div class="changelog-entry">
+        <h4>v1.1</h4>
+        <ul><li>Added image support</li></ul>
+      </div>
+      <div class="changelog-entry">
+        <h4>v1.0</h4>
+        <ul><li>Initial creation</li></ul>
+      </div>
     </details>
   </div>
 
   <div class="controls">
     <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
 
-    <div class="controls-inline">
-      <div class="toggle-container">
-        <input type="checkbox" id="toggleImages" checked>
-        <label for="toggleImages">Show Images</label>
-      </div>
+    <div class="inline-group">
+      <input type="checkbox" id="toggleImages" checked>
+      <label for="toggleImages">Show Images</label>
+    </div>
 
-      <span class="separator">|</span>
-
-      <div class="sort-container">
-        <label for="sortMode" style="margin-right: 6px;">Sort By:</label>
-        <select id="sortMode">
-          <option value="camp-top" selected>Workshop Menu ▼</option>
-          <option value="camp-bottom">Workshop Menu ▲</option>
-          <option value="old-new">New ▼</option>
-          <option value="new-old">New ▲</option>
-        </select>
-      </div>
+    <div class="inline-group">
+      <label for="sortMode" style="color: var(--text-muted); font-size: 14px;">Sort By:</label>
+      <select id="sortMode">
+        <option value="camp-top" selected>Workshop Menu ▼</option>
+        <option value="camp-bottom">Workshop Menu ▲</option>
+        <option value="new-old">New ▲</option>
+        <option value="old-new">New ▼</option>
+      </select>
     </div>
   </div>
 
@@ -363,11 +311,10 @@
 
         function sortItems(items) {
           const mode = sortMode.value;
-
           if (mode === 'camp-bottom') return [...items].reverse();
-          if (mode === 'new-old') return [...items].sort((a,b) => (b.CNAM_FormID||'').localeCompare(a.CNAM_FormID||''));
-          if (mode === 'old-new') return [...items].sort((a,b) => (a.CNAM_FormID||'').localeCompare(b.CNAM_FormID||''));
-          return items;
+          if (mode === 'new-old') return [...items].sort((a, b) => (b.CNAM_FormID || '').localeCompare(a.CNAM_FormID || ''));
+          if (mode === 'old-new') return [...items].sort((a, b) => (a.CNAM_FormID || '').localeCompare(b.CNAM_FormID || ''));
+          return items; // default
         }
 
         function renderResults(query) {
@@ -375,11 +322,13 @@
           const filtered = db.filter(item => !query || (item.Name && item.Name.toLowerCase().includes(query)));
           const sorted = sortItems(filtered);
 
-          if (!sorted.length) { results.innerHTML = '<li>No matches found</li>'; return; }
+          if (!sorted.length) {
+            results.innerHTML = '<li>No matches found</li>';
+            return;
+          }
 
           sorted.forEach(r => {
             const li = document.createElement('li');
-
             const left = document.createElement('div');
             left.className = 'result-left';
 
@@ -398,7 +347,6 @@
 
             const right = document.createElement('div');
             right.className = 'result-right';
-
             const categories = [];
             if (r.Category) categories.push(r.Category);
             if (r.SubCategory && r.Category.toLowerCase() !== 'wallpapers') categories.push(r.SubCategory);
@@ -408,7 +356,6 @@
               catSpan.className = 'pill';
               catSpan.textContent = cat;
               right.appendChild(catSpan);
-
               if (index < categories.length - 1) {
                 const arrow = document.createElement('span');
                 arrow.className = 'arrow';
