--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -74,6 +74,14 @@
       gap: 12px;
     }
 
+    .inline-group .separator {
+      color: var(--text-muted);
+      margin: 0 8px;
+      display: flex;
+      align-items: center;
+      user-select: none; 
+    }
+
     .controls input[type="text"] {
       padding: 10px;
       font-size: 16px;
@@ -84,6 +92,14 @@
       background-color: var(--card-bg);
       color: var(--text);
     }
+
+    .controls .search-line {
+     width: 100%;
+     display: flex;
+     justify-content: center; 
+     margin-bottom: 8px;    
+    }
+
 
     .controls label {
       font-size: 14px;
@@ -240,12 +256,16 @@
     <img src="/assets/CoverImage.png" alt="Fallout 76 C.A.M.P. Item Lookup" style="display: block; margin: 0 auto; max-width: 100%; height: auto;">
     <div class="meta">
       <p style="color: var(--text-muted); font-size: 14px;">Made by MrsBlobby</p>
-      <p style="color: var(--text-muted); font-size: 12px;">Last Updated: October 4, 2025</p>
+      <p style="color: var(--text-muted); font-size: 12px;">Last Updated: October 8, 2025</p>
     </div>
 
     <!-- Version history -->
     <details>
       <summary>Version History</summary>
+      <div class="changelog-entry">
+        <h4>v2.2</h4>
+        <ul><li>Added sorting options</li></ul>
+      </div>
       <div class="changelog-entry">
         <h4>v2.1.2</h4>
         <ul><li>Fixed issue that caused a lot of Turret entries to be missing</li></ul>
@@ -282,23 +302,24 @@
   </div>
 
   <div class="controls">
-    <!-- Line 1: Search bar -->
-    <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
+    <div class="search-line">
+      <input type="text" id="searchBox" placeholder="Enter item name..." autofocus>
+    </div>
 
-    <!-- Line 2: Show Images + Sort menu -->
     <div class="inline-group">
       <input type="checkbox" id="toggleImages" checked>
       <label for="toggleImages">Show Images</label>
-
+      <span class="separator">|</span>
       <label for="sortMode" style="color: var(--text-muted); font-size: 14px; margin-left: 16px;">Sort By:</label>
       <select id="sortMode">
         <option value="camp-top" selected>Workshop Menu ▼</option>
         <option value="camp-bottom">Workshop Menu ▲</option>
-        <option value="new-old">New ▲</option>
         <option value="old-new">New ▼</option>
+        <option value="new-old">New ▲</option>
       </select>
     </div>
   </div>
+
 
 
   <ul id="results"></ul>
