--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -309,13 +309,15 @@
     <div class="inline-group">
       <input type="checkbox" id="toggleImages" checked>
       <label for="toggleImages">Show Images</label>
-      <span class="separator">|</span>
+      <span class="separator"></span>
       <label for="sortMode" style="color: var(--text-muted); font-size: 14px; margin-left: 16px;">Sort By:</label>
       <select id="sortMode">
         <option value="camp-top" selected>Workshop Menu ▼</option>
         <option value="camp-bottom">Workshop Menu ▲</option>
         <option value="old-new">New ▼</option>
         <option value="new-old">New ▲</option>
+        <option value="az">Alphabetical ▼</option>
+        <option value="za">Alphabetical ▲</option>
       </select>
     </div>
   </div>
@@ -338,6 +340,8 @@
           if (mode === 'camp-bottom') return [...items].reverse();
           if (mode === 'new-old') return [...items].sort((a, b) => (b.CNAM_FormID || '').localeCompare(a.CNAM_FormID || ''));
           if (mode === 'old-new') return [...items].sort((a, b) => (a.CNAM_FormID || '').localeCompare(b.CNAM_FormID || ''));
+          if (mode === 'az') return [...items].sort((a, b) => (a.Name || '').localeCompare(b.Name || ''));
+          if (mode === 'za') return [...items].sort((a, b) => (b.Name || '').localeCompare(a.Name || ''));
           return items; // default
         }
 
