--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -263,6 +263,10 @@
     <details>
       <summary>Version History</summary>
       <div class="changelog-entry">
+        <h4>v2.2.1</h4>
+        <ul><li>Hid entries that returned null as a name in database</li></ul>
+      </div>
+      <div class="changelog-entry">
         <h4>v2.2</h4>
         <ul><li>Added sorting options</li></ul>
       </div>
