--- a/CampCategorySearch-PTS/Index.html
+++ b/CampCategorySearch-PTS/Index.html
@@ -12,7 +12,7 @@
   <title>Fallout 76 C.A.M.P. Item Lookup</title>
   <style>
     :root {
-      --accent: #ffc00f;
+      --accent: #2596be;
       --bg: #1a1a1a;
       --card-bg: #2a2a2a;
       --text: #e0e0e0;
