--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -45,6 +45,25 @@
       margin-bottom: 12px;
     }
 
+    #pagination button {
+      padding: 6px 10px;
+      background: var(--card-bg);
+      color: var(--text);
+      border: 1px solid var(--accent);
+      border-radius: 4px;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+    #pagination button:hover:not(:disabled) {
+      background: var(--accent);
+      color: black;
+    }
+    #pagination button:disabled {
+      opacity: 0.4;
+      cursor: default;
+    }
+
+
     select {
       appearance: none;
       -webkit-appearance: none;
