--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -489,7 +489,7 @@
 
       searchBox.addEventListener('input', () => renderResults(searchBox.value));
       toggleImages.addEventListener('change', () => renderResults(searchBox.value));
-      sortMode.addEventListener('change', () => renderResults(searchBox.value));
+      sortMode.addEventListener('change', () => { currentPage = 1; renderResults(searchBox.value.toLowerCase());});
 
       renderResults('');
     })
