--- a/CAMPCategorySearch/Index.html
+++ b/CAMPCategorySearch/Index.html
@@ -275,12 +275,16 @@
     <img src="/assets/CoverImage.png" alt="Fallout 76 C.A.M.P. Item Lookup" style="display: block; margin: 0 auto; max-width: 100%; height: auto;">
     <div class="meta">
       <p style="color: var(--text-muted); font-size: 14px;">Made by MrsBlobby</p>
-      <p style="color: var(--text-muted); font-size: 12px;">Last Updated: October 11, 2025</p>
+      <p style="color: var(--text-muted); font-size: 12px;">Last Updated: October 19, 2025</p>
     </div>
 
     <!-- Version history -->
     <details>
       <summary>Version History</summary>
+      <div class="changelog-entry">
+        <h4>v2.3.1</h4>
+        <ul><li>Fixed issue that caused crops to not have preview images</li></ul>
+      </div>
       <div class="changelog-entry">
         <h4>v2.3</h4>
         <ul><li>Results are now displayed in pages of up to 50 entries in an effort to optimize performance</li></ul>
