--- a/CampCategorySearch-PTS/Index.html
+++ b/CampCategorySearch-PTS/Index.html
@@ -282,6 +282,10 @@
     <details>
       <summary>Version History</summary>
       <div class="changelog-entry">
+        <h4>v2.3.1</h4>
+        <ul><li>Fixed issue that caused crops to not have preview images</li></ul>
+      </div>
+      <div class="changelog-entry">
         <h4>v2.3</h4>
         <ul><li>Results are now displayed in pages of up to 50 entries in an effort to optimize performance</li></ul>
       </div>
