--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -282,6 +282,14 @@
     <details>
       <summary>Version History</summary>
       <div class="changelog-entry">
+        <h4>v2.3.1</h4>
+        <ul><li>Fixed issue that caused crops to not have preview images</li></ul>
+      </div>
+      <div class="changelog-entry">
+        <h4>v2.3</h4>
+        <ul><li>Results are now displayed in pages of up to 50 entries in an effort to optimize performance</li></ul>
+      </div>
+      <div class="changelog-entry">
         <h4>v2.2.1</h4>
         <ul><li>Hid entries that returned null as a name in database</li></ul>
       </div>
@@ -485,7 +493,11 @@
 
       searchBox.addEventListener('input', () => renderResults(searchBox.value));
       toggleImages.addEventListener('change', () => renderResults(searchBox.value));
-      sortMode.addEventListener('change', () => renderResults(searchBox.value));
+      sortMode.addEventListener('change', () => {
+        currentPage = 1;
+        renderResults(searchBox.value.toLowerCase());
+      });
+
 
       renderResults('');
     })
