--- a/76Tools.html
+++ b/76Tools.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="MrsBlobby's Fallout 76 Tools Hub">
-  <meta property="og:description" content="Tools related to Fallout 76 I've made">
+  <meta property="og:description" content="Tools related to Fallout 76 made by MrsBlobby"
   <meta property="og:image" content="https://raw.githubusercontent.com/MrsBlobby/mrsblobby.github.io/main/assets/76Logo.png
   <meta property="og:url" content="https://mrsblobby.github.io/">
   <meta property="og:type" content="website">
@@ -33,8 +33,9 @@
     }
     .header-banner {
     width: 100%;
+    height: auto;
     max-height: 300px;
-    object-fit: cover;
+    object-fit: contain;
     border-top: 2px solid var(--card-bg);
     border-bottom: 2px solid var(--card-bg);
     margin-top: 20px;
@@ -149,8 +150,8 @@
 </head>
 <body>
   <header>
-    <p>Collection of custom-made utilities for modding and exploring Fallout 76</p>
     <img class="header-banner" src="/assets/HubCover.png" alt="Fallout 76 Tools Banner">
+    <p>Collection of custom-made utilities for modding and exploring Fallout 76</p>
   </header>
 
   <main>
