--- a/76Tools.html
+++ b/76Tools.html
@@ -8,7 +8,7 @@
   <meta property="og:image" content="https://raw.githubusercontent.com/MrsBlobby/mrsblobby.github.io/main/assets/76Logo.png
   <meta property="og:url" content="https://mrsblobby.github.io/">
   <meta property="og:type" content="website">
-  <link rel="icon" type="image/svg" href="/assets/svg/76Logo.svg>
+  <link rel="icon" type="image/svg" href="/assets/svg/CAMPIcon.svg">
   <title>MrsBlobby’s Fallout 76 Tools</title>
   <style>
     :root {
@@ -151,6 +151,7 @@
 <body>
   <header>
     <img class="header-banner" src="/assets/HubCover.png" alt="Fallout 76 Tools Banner">
+    <p></p>
   </header>
 
   <main>
