--- a/76Tools.html
+++ b/76Tools.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="MrsBlobby's Fallout 76 Tools Hub">
+  <meta property="og:title" content="MrsBlobby's Fallout 76 Tools">
   <meta property="og:description" content="Tools related to Fallout 76 made by MrsBlobby"
-  <meta property="og:image" content="https://raw.githubusercontent.com/MrsBlobby/mrsblobby.github.io/main/assets/76Logo.png
+  <meta property="og:image" content="https://raw.githubusercontent.com/MrsBlobby/mrsblobby.github.io/main/assets/76Logo.png"
   <meta property="og:url" content="https://mrsblobby.github.io/">
   <meta property="og:type" content="website">
   <link rel="icon" type="image/svg" href="/assets/svg/76Logo.svg"
@@ -34,8 +34,9 @@
     .header-banner {
     width: 100%;
     height: auto;
-    max-height: 300px;
-    object-fit: contain;
+    max-height: 240px;
+    object-fit: cover;
+    object-position: center;
     border-top: 2px solid var(--card-bg);
     border-bottom: 2px solid var(--card-bg);
     margin-top: 20px;
