--- a/76Tools.html
+++ b/76Tools.html
@@ -34,9 +34,8 @@
     .header-banner {
     width: 100%;
     height: auto;
-    max-height: 240px;
-    object-fit: cover;
-    object-position: center;
+    max-height: 300px;
+    object-fit: contain;
     border-top: 2px solid var(--card-bg);
     border-bottom: 2px solid var(--card-bg);
     margin-top: 20px;
