--- a/76Tools.html
+++ b/76Tools.html
@@ -9,7 +9,7 @@
   <meta property="og:url" content="https://mrsblobby.github.io/">
   <meta property="og:type" content="website">
   <link rel="icon" type="image/svg" href="/assets/svg/76Logo.svg"
-  <title>MrsBlobby’s Fallout 76 Tools</title>
+  <title></title>
   <style>
     :root {
       --bg: #1a1a1a;
