--- a/76Tools.html
+++ b/76Tools.html
@@ -177,7 +177,7 @@
   </main>
 
   <footer>
-    <p>Made by MrsBlobby | Last Updated: October 2025</p>
+    <p>Last Updated: October 2025</p>
   </footer>
 </body>
 </html>
